# AID_NeurIPS_2024

./: .gitignore  .gitmodules  README.md  Sustech_segmentation_demo.ipynb  pyproject.toml
annotation_duration_display/: seg_techniques_stats.ipynb  segmentation_techniques_stats.csv
annotation_duration_display/segmentation_csvs/: microfaune_pre.csv
sustech_paper_2024/: visualizations.ipynb
visualizations/: fg_bg_class_stats.csv  manual_pre.csv  microfaune_class_stats.csv  seg_techniques_stats.ipynb  test.ipynb  tweetynet_class_stats.csv  tweetynet_pre.csv  visualizations.ipynb
