[tool.poetry]
name = "AID_NeurIPS_2024"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Sean Perry <sean.hyatt.perry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.9,<3.11"
pyha = {path = "PyHa"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
